--- a/index.html
+++ b/index.html
@@ -62,18 +62,18 @@
 
              
             
-            <img class="i1" src="D:/create/web stuff/my-war/IMAGES/1.jpg" alt="">
+            <img class="i1" src="IMAGES/1.jpg" alt="">
 
-            <img class="i2" src="D:/create/web stuff/my-war/IMAGES/2.jpg" alt="">
+            <img class="i2" src="IMAGES/2.jpg" alt="">
 
-            <img class="i3" src="D:/create/web stuff/my-war/IMAGES/3.jpg" alt="">
+            <img class="i3" src="IMAGES/3.jpg" alt="">
 
-            <img class="i5" src="D:/create/web stuff/my-war/IMAGES/5.jpg" alt="">
+            <img class="i5" src="IMAGES/5.jpg" alt="">
 
-            <img class="i4" src="D:/create/web stuff/my-war/IMAGES/4.jpg" alt="">
+            <img class="i4" src="IMAGES/4.jpg" alt="">
 
 
-            <img class="i6" src="D:/create/web stuff/my-war/IMAGES/6.jpg" alt="">
+            <img class="i6" src="IMAGES/6.jpg" alt="">
 
 
         </ul>
