--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             
             <img class="i1" src="IMAGES/1.jpg" alt="">
 
-            <img class="i2" src="IMAGES/2.jpg" alt="">
-            
+            <img class="i2" src="IMAGES/2 - Copy.jpg" alt="">
+
 
             <img class="i3" src="IMAGES/3.jpg" alt="">
 
