if this doesnt work im deletin this

--- a/index.html
+++ b/index.html
@@ -64,9 +64,6 @@
             
             <img class="i1" src="IMAGES/1.jpg" alt="">
 
-            <img class="i2" src="2.jpg" alt="">
-
-
             <img class="i3" src="IMAGES/3.jpg" alt="">
 
             <img class="i5" src="IMAGES/5.jpg" alt="">
@@ -74,6 +71,8 @@
             <img class="i4" src="IMAGES/4.jpg" alt="">
 
             <img class="i6" src="IMAGES/6.jpg" alt="">
+
+            <img class="i2" src="IMAGES/2.jpg" alt="">
 
 
         </ul>
