--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
              
             
                <button class="row_buttos"  onclick="openings_load()">ops</button>
-               <button class="row_buttos">characters</button>
-               <button class="row_buttos">extra</button>
+               <button class="row_buttos"  onclick="countdown_load()">s4 countdown</button>
+               <button class="row_buttos"  onclick="yelena_load()">yelena</button>
 
 
 
